# Combinancion-Automatica

./: CMakeLists.txt
application/: AGS-island.cpp  AGS-permuta.cpp  CMakeLists.txt
build-old/: CMakeCache.txt  Makefile
build-old/application/: AGS-island  AGS-island.status  AGS-permuta  IslaFour-Generation1.sav  IslaFour-Generation10.sav  IslaFour-Generation11.sav  IslaFour-Generation12.sav  IslaFour-Generation13.sav  IslaFour-Generation14.sav  IslaFour-Generation15.sav  IslaFour-Generation16.sav  IslaFour-Generation17.sav  IslaFour-Generation18.sav  IslaFour-Generation19.sav  IslaFour-Generation2.sav  IslaFour-Generation3.sav  IslaFour-Generation4.sav  IslaFour-Generation5.sav  IslaFour-Generation6.sav  IslaFour-Generation7.sav  IslaFour-Generation8.sav  IslaFour-Generation9.sav  IslaOne-Generation1.sav  IslaOne-Generation10.sav  IslaOne-Generation11.sav  IslaOne-Generation12.sav  IslaOne-Generation13.sav  IslaOne-Generation14.sav  IslaOne-Generation15.sav  IslaOne-Generation16.sav  IslaOne-Generation17.sav  IslaOne-Generation18.sav  IslaOne-Generation19.sav  IslaOne-Generation2.sav  IslaOne-Generation3.sav  IslaOne-Generation4.sav  IslaOne-Generation5.sav  IslaOne-Generation6.sav  IslaOne-Generation7.sav  IslaOne-Generation8.sav  (+48 more)
build-old/application/Ejecucion 1/: generacion100.sav  generacion101.sav  generacion103.sav  generacion104.sav  generacion106.sav  (+91 more)
build-old/datos/: Makefile  cmake_install.cmake
build-old/src/: Makefile  cmake_install.cmake
datos/: AGS-permuta.param  CMakeLists.txt
src/: SVN.h  ceroOperador.h  evalGAs.h  evalPrueba.h
(+2 files in other folders)
